--- a/example.yaml
+++ b/example.yaml
@@ -1,6 +1,34 @@
 # Top-level YAML entries must contain a type: tag
 # that specifies the type of the entry.
 #
+# Reserved keywords:
+#   version: <int>
+#      The file format version. This must be a top-level section. Where
+#      include directives are present, all included files must have the same
+#      version. Where missing, the version number is 1.
+#
+#   include: path/to/file
+#      Includes the given file with the path relative to the current file.
+#      Inclusion is in situ, i.e. the location of the include directive
+#      matters.
+#
+#   <section name>:
+#      type: [actor|test]
+#      See the description below
+#
+#   extends:
+#      Allowed in sections of type actor or test.
+#
+#   file:
+#     <some key>: |
+#            some lengthy description of the tests
+#
+#     A section that describes the file itself. This description will be
+#     copied into the resulting markdown file as the Uji section
+#     description. The <some key> should be unique to avoid clashes when
+#     including other files but it is not otherwise used. Use the filename.
+#
+#
 # The actor type is an entity that a test is performed on.
 # Allowed subkeys:
 #    extends: inherit all from the referenced section
@@ -32,6 +60,11 @@
 #         value 'exitcode': the output is the exit code of the command
 #         value 'human': the output depends on human-interpretation
 version: 1
+
+file:
+    example.yaml: |
+        This is an example yaml file. The text here is used as the file
+        description in the generated markdown file.
   
 generic_laptop_keyboard:
   type: actor
