--- a/tests/data/basic-tree.yaml
+++ b/tests/data/basic-tree.yaml
@@ -51,3 +51,17 @@ test5:
         - testcase5.2 (actor two only)
     logs:
         files: [file05-actor-two]
+
+test6:
+    type: test
+    filter:
+        actor: ["!two"]
+    tests:
+        - testcase6 (actor one only)
+
+test7:
+    type: test
+    filter:
+        actor: ["!one", "two"]
+    tests:
+        - testcase7 (actor two only)
