--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,5 +24,22 @@ jobs:
         run: |
           pytest
 
+  black:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11"]
 
-
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install black
+      - name: Run Python black
+        run: |
+          black --diff --check .
